--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/leon0707/demo-component/issues"
   },
-  "homepage": "https://github.com/leon0707/demo-component#readme"
+  "homepage": "https://github.com/leon0707/demo-component#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6"
+  }
 }
