--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "style-loader": "^1.1.2",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "peerDependencies": {
+     "react": "^16.12.0",
+     "prop-types": "^15.7.2"
   }
 }
